[gd_scene load_steps=3 format=3 uid="uid://dm3rkg3nbswpm"]

[ext_resource type="Script" path="res://settings.gd" id="1_f50f6"]
[ext_resource type="AudioStream" uid="uid://brceutmm1gi3n" path="res://Audio/Music (online-audio-converter.com).mp3" id="2_otw0c"]

[node name="VolumeSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f50f6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Settings"

[node name="Volume2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume
"

[node name="Volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Mute" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mute"

[node name="Fullscreen" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 12.82
text = "Full Screen / windowed"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Controls: A & D to move     Esc to Pause"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_otw0c")
autoplay = true

[connection signal="value_changed" from="MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Mute" to="." method="_on_mute_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
